<resources>
    <string name="app_name">Animal Coders</string>

    <string name="username">username</string>
    <string name="password">password</string>
    <string name="log_in">Log in</string>
    <string name="cancel">Cancel</string>
    <string name="username_error">Username cannot be empty</string>
    <string name="password_error">Password cannot be empty</string>
    <string name="accept">Accept</string>
    <string name="unknown_error">"Unknown error"</string>
    <string name="tab_search">Search</string>
    <string name="tab_map">Map</string>
    <string name="tab_profile">Profile</string>
    <string name="action_logout_text">Logout</string>

    <string name="animal_age_text">Age: %1$s</string>
    <string name="animal_gender_text">Gender: %1$s</string>

    <!-- Api -->
    <string name="api_key">QVSiWHOa</string>
    <string name="api_url">https://test1-api.rescuegroups.org/v5/public/</string>

    <string name="register">Register</string>
    <string name="signup">SignUp</string>
    <string name="my_favourites">My Favourites</string>
</resources>
