<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/rl_login_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_extrabig"
        android:layout_marginLeft="@dimen/margin_extrabig"
        android:layout_marginRight="@dimen/margin_extrabig"
        android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/margin_small"
                android:drawableStart="@drawable/ic_username"
                android:textColor="@color/colorPrimaryText"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:selectAllOnFocus="true"
        />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            android:layout_below="@+id/til_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/margin_small"
                android:drawableStart="@drawable/ic_password"
                android:textColor="@android:color/primary_text_light"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:selectAllOnFocus="true"
        />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_password"
            android:layout_toStartOf="@+id/bt_login"
            android:layout_marginEnd="@dimen/margin_normal"
            android:text="@string/cancel"
            app:cornerRadius="16dp"
            android:textColor="@color/colorAccent"
            style="@style/Widget.MaterialComponents.Button.TextButton"
    />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_password"
            android:layout_alignParentEnd="true"
            android:text="@string/log_in"
            app:cornerRadius="16dp"
            android:textColor="@android:color/white"
            style="@style/Button"
    />

    <ProgressBar
            android:id="@+id/pb_wait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/bt_login"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            tools:visibility="visible"
    />

</RelativeLayout>