<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".register.RegisterActivity">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:textColor="@android:color/primary_text_light"
            app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/primary_text_light" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:textColor="@android:color/primary_text_light"
            app:layout_constraintTop_toBottomOf="@id/til_email">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="textPassword"
                android:textColor="@android:color/primary_text_light" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signup"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_big"
            android:text="@string/signup"
            android:textColor="@android:color/white"
            app:cornerRadius="16dp"
            app:layout_constraintRight_toRightOf="@id/til_password"
            app:layout_constraintTop_toBottomOf="@id/til_password" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_extrabig"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent"
            app:cornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="@id/btn_signup"
            app:layout_constraintRight_toLeftOf="@id/btn_signup"
            app:layout_constraintTop_toTopOf="@id/btn_signup" />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loading_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#66000000"
            android:visibility="gone"
            tools:visibility="visible">

        <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:progressTint="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
